Tela Login e Configurar

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,11 +1,25 @@
 # This is the resource bundle for com.pontual.sgmr
-
 #Texts for manifest.json
-
 #XTIT: Application name
 appTitle=SGMR Mobile
-
 #YDES: Application description
 appDescription=Sistema de Gestão Material Rodante
+cancelar=Cancelar
+cliente=Cliente
+configurar=Configurar
+confirmar=Confirmar
+conexao=Conexão
+dadosconexao=Dados Conexão
+entrar=Entrar
+host=Host
+porta=Porta
+protocolo=Protocolo
+senha=Senha
+testar=Testar
+usuario=Usuário
 #XTIT: Main view title
 title=SGMR Mobile
+url=URL
+versao=Versão 1.0.0
+
+
