Configurar, Início e Administrativo

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,5 +1,6 @@
 # This is the resource bundle for com.pontual.sgmr
 #Texts for manifest.json
+administrativo=Administrativo
 #XTIT: Application name
 appTitle=SGMR Mobile
 #YDES: Application description
@@ -12,11 +13,14 @@ conexao=Conexão
 dadosconexao=Dados Conexão
 entrar=Entrar
 host=Host
+materialrodante=Material Rodante
+perfil=Perfil
 porta=Porta
 protocolo=Protocolo
 senha=Senha
 testar=Testar
 usuario=Usuário
+usuarios=Usuários
 #XTIT: Main view title
 title=SGMR Mobile
 url=URL
