Perfil e Usuário - Navegação

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,10 +10,15 @@ cliente=Cliente
 configurar=Configurar
 confirmar=Confirmar
 conexao=Conexão
+criarperfil=Criar Perfil
+criarusuario=Criar Usuário
 dadosconexao=Dados Conexão
 entrar=Entrar
 host=Host
+listaperfis=Lista Perfis
+listausuarios=Lista Usuários
 materialrodante=Material Rodante
+nome=Nome
 perfil=Perfil
 porta=Porta
 protocolo=Protocolo
