Listas, Criar + Mock Dados Perfil e Usuários

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,14 +5,23 @@ administrativo=Administrativo
 appTitle=SGMR Mobile
 #YDES: Application description
 appDescription=Sistema de Gestão Material Rodante
+autorizacao=Autorização
+autorizacoes=Autorizações
+bloqueado=Bloqueado
 cancelar=Cancelar
+centro=Centro
 cliente=Cliente
 configurar=Configurar
 confirmar=Confirmar
+confirmarsenha=Confirmar Senha
 conexao=Conexão
 criarperfil=Criar Perfil
 criarusuario=Criar Usuário
 dadosconexao=Dados Conexão
+dadosgerais=Dados Gerais
+dadosperfil=Dados Perfil
+descricao=Descrição
+deposito=Depósito
 entrar=Entrar
 host=Host
 listaperfis=Lista Perfis
