Finalização Lista Material Rodante Parte 1

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -15,6 +15,7 @@ configurar=Configurar
 confirmar=Confirmar
 confirmarsenha=Confirmar Senha
 conexao=Conexão
+criarmaterialrodante=Criar Material Rodante
 criarperfil=Criar Perfil
 criarusuario=Criar Usuário
 dadosconexao=Dados Conexão
@@ -24,6 +25,7 @@ descricao=Descrição
 deposito=Depósito
 entrar=Entrar
 host=Host
+listamaterialrodante=Lista Material Rodante
 listaperfis=Lista Perfis
 listausuarios=Lista Usuários
 materialrodante=Material Rodante
