Início aplicação de seções para Material Rodante

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,6 +11,7 @@ bloqueado=Bloqueado
 cancelar=Cancelar
 centro=Centro
 cliente=Cliente
+codigo=Código
 configurar=Configurar
 confirmar=Confirmar
 confirmarsenha=Confirmar Senha
